refactor: Update Gemini API key configuration
Changes the Gemini API key to use `VITE_GEMINI_API_KEY` from environment variables, improving security and flexibility. Updates the warning message to reflect this change.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["."],
-  "exclude": ["node_modules", "dist", "vite.config.ts", "tailwind.config.js", "postcss.config.js"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
